--- a/package.json
+++ b/package.json
@@ -3,14 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@storybook/builder-vite": "^0.4.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "@storybook/builder-vite": "^0.4.2",
     "@vitejs/plugin-react": "^3.1.0",
     "jest-environment-jsdom": "^29.4.3",
+    "less": "^4.1.3",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "rollup-plugin-postcss": "^4.0.2",
     "vite": "^4.1.4"
   },
   "scripts": {
