--- a/package.json
+++ b/package.json
@@ -2,19 +2,6 @@
   "name": "dev-docs",
   "version": "0.1.0",
   "private": true,
-  "dependencies": {
-    "@storybook/builder-vite": "^0.4.2",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@vitejs/plugin-react": "^3.1.0",
-    "jest-environment-jsdom": "^29.4.3",
-    "less": "^4.1.3",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
-    "rollup-plugin-postcss": "^4.0.2",
-    "vite": "^4.1.4"
-  },
   "scripts": {
     "docs": "start-storybook -p 3006 -s public --no-open",
     "build-storybook": "build-storybook -s public"
@@ -46,6 +33,31 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "dependencies": {
+    "@babel/core": "^7.21.0",
+    "@babel/plugin-transform-react-jsx": "^7.21.0",
+    "@babel/plugin-transform-runtime": "^7.21.0",
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-react": "^7.18.6",
+    "@senojs/rollup-plugin-style-inject": "^0.2.3",
+    "@storybook/builder-vite": "^0.4.2",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "@vitejs/plugin-react": "^3.1.0",
+    "antd": "^4.21.6",
+    "autoprefixer": "^10.4.13",
+    "cssnano": "^5.1.15",
+    "jest-environment-jsdom": "^29.4.3",
+    "less": "^4.1.3",
+    "postcss-custom-selectors": "^7.1.2",
+    "postcss-import": "^15.1.0",
+    "postcss-nested": "^6.0.1",
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0",
+    "rollup-plugin-postcss": "^4.0.2",
+    "vite": "^4.1.4"
   },
   "devDependencies": {
     "@storybook/addon-actions": "^6.5.16",
