--- a/package.json
+++ b/package.json
@@ -35,43 +35,38 @@
     ]
   },
   "dependencies": {
-    "@babel/core": "^7.21.0",
-    "@babel/plugin-transform-react-jsx": "^7.21.0",
-    "@babel/plugin-transform-runtime": "^7.21.0",
-    "@babel/preset-env": "^7.20.2",
-    "@babel/preset-react": "^7.18.6",
-    "@senojs/rollup-plugin-style-inject": "^0.2.3",
-    "@storybook/builder-vite": "^0.4.2",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@vitejs/plugin-react": "^3.1.0",
-    "antd": "^4.21.6",
-    "autoprefixer": "^10.4.13",
-    "cssnano": "^5.1.15",
-    "jest-environment-jsdom": "^29.4.3",
-    "less": "^4.1.3",
-    "postcss-custom-selectors": "^7.1.2",
-    "postcss-import": "^15.1.0",
-    "postcss-nested": "^6.0.1",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
-    "rollup-plugin-postcss": "^4.0.2",
-    "vite": "^4.1.4"
-  },
-  "devDependencies": {
+    "@etchteam/storybook-addon-status": "^4.2.2",
     "@storybook/addon-actions": "^6.5.16",
     "@storybook/addon-essentials": "^6.5.16",
     "@storybook/addon-interactions": "^6.5.16",
     "@storybook/addon-links": "^6.5.16",
+    "@storybook/addon-postcss": "^2.0.0",
+    "@storybook/builder-vite": "^0.4.2",
     "@storybook/builder-webpack5": "^6.5.16",
     "@storybook/manager-webpack5": "^6.5.16",
     "@storybook/node-logger": "^6.5.16",
     "@storybook/preset-create-react-app": "^4.1.2",
     "@storybook/react": "^6.5.16",
     "@storybook/testing-library": "^0.0.13",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "@vitejs/plugin-react": "^3.1.0",
+    "antd": "^4.21.6",
+    "autoprefixer": "^10.4.13",
     "babel-plugin-named-exports-order": "^0.0.2",
+    "cssnano": "^5.1.15",
+    "jest-environment-jsdom": "^29.4.3",
+    "less": "^4.1.3",
+    "postcss-custom-selectors": "^7.1.2",
+    "postcss-import": "^15.1.0",
+    "postcss-nested": "^6.0.1",
+    "postcss": "^8.4.21",
     "prop-types": "^15.8.1",
+    "react-dom": "^16.9.0",
+    "react": "^16.9.0",
+    "storybook-design-token": "^2.9.0",
+    "vite": "^4.1.4",
     "webpack": "^5.75.0"
   }
 }
