--- a/package.json
+++ b/package.json
@@ -35,6 +35,11 @@
     ]
   },
   "dependencies": {
+    "antd": "^4.21.6",
+    "react-dom": "^16.9.0",
+    "react": "^16.9.0"
+  },
+  "devDependencies": {
     "@etchteam/storybook-addon-status": "^4.2.2",
     "@storybook/addon-actions": "^6.5.16",
     "@storybook/addon-essentials": "^6.5.16",
@@ -52,7 +57,6 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@vitejs/plugin-react": "^3.1.0",
-    "antd": "^4.21.6",
     "autoprefixer": "^10.4.13",
     "babel-plugin-named-exports-order": "^0.0.2",
     "cssnano": "^5.1.15",
@@ -63,8 +67,6 @@
     "postcss-nested": "^6.0.1",
     "postcss": "^8.4.21",
     "prop-types": "^15.8.1",
-    "react-dom": "^16.9.0",
-    "react": "^16.9.0",
     "storybook-design-token": "^2.9.0",
     "vite": "^4.1.4",
     "webpack": "^5.75.0"
