--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     ]
   },
   "dependencies": {
-    "antd": "^4.21.6",
+    "antd": "4.21.6",
     "react-dom": "^16.9.0",
     "react": "^16.9.0"
   },
